; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_cp210x.c_cp210x_dtr_rts.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_cp210x.c_cp210x_dtr_rts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_serial_port = type { i32 }

@TIOCM_DTR = common dso_local global i32 0, align 4
@TIOCM_RTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_serial_port*, i32)* @cp210x_dtr_rts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cp210x_dtr_rts(%struct.usb_serial_port* %0, i32 %1) #0 {
  %3 = alloca %struct.usb_serial_port*, align 8
  %4 = alloca i32, align 4
  store %struct.usb_serial_port* %0, %struct.usb_serial_port** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load %struct.usb_serial_port*, %struct.usb_serial_port** %3, align 8
  %9 = load i32, i32* @TIOCM_DTR, align 4
  %10 = load i32, i32* @TIOCM_RTS, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @cp210x_tiocmset_port(%struct.usb_serial_port* %8, i32* null, i32 %11, i32 0)
  br label %19

13:                                               ; preds = %2
  %14 = load %struct.usb_serial_port*, %struct.usb_serial_port** %3, align 8
  %15 = load i32, i32* @TIOCM_DTR, align 4
  %16 = load i32, i32* @TIOCM_RTS, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @cp210x_tiocmset_port(%struct.usb_serial_port* %14, i32* null, i32 0, i32 %17)
  br label %19

19:                                               ; preds = %13, %7
  ret void
}

declare dso_local i32 @cp210x_tiocmset_port(%struct.usb_serial_port*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
